# BBLine

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  README_SQL.md  check_hero_calls.py  check_leaks.py  check_stats.py  migrate_add_is_limp.py  pyproject.toml  requirements-dev.txt  requirements.txt  roarmap.md  setup.cfg  setup.py  test_periodic.py  todo_metric.md
.github/workflows/: python-ci.yml
analysis/: audit_hero.py  hands_by_position.py  hands_stats.py  hero_action_stats.py  hero_hands.py  hero_stats.py  report_hero_net.py  street_loss.py  strong_hands.py  strong_hands_review.py  summary.py  top_losing_hands.py  utils.py
assets/: test_hand_01.txt
bbline/: __init__.py  dashboard_data.py  hands_table.py  main.py  requirements.txt  utils.py
bbline.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
bbline/analysis/: analyzer.py  check_positions.py  leakfinder.py  periodic.py  rebuild_computed.py
bbline/assets/: test_session.txt
bbline/database/: create_schema.py  db_utils.py
bbline/ingest/: batch_import.py  ggpoker_import.py
bbline/parse/: batch_import.py  hand_parser.py
bbline/replayer/: replay_one.py
core/: parser.py
data/raw/: GG20250509-1348 - NLHWhite65 - 0.01 - 0.02 - 6max.txt  (+7 more)
db/: bbline.sqlite
export/: format_for_gpt.py  generate_json.py  insert_flags.py
exports/: hands_full.jsonl  hands_gpt.txt
parser/: ggparser.py
src/: bbline.py
src/analysis/: hands_stats.py  (+4 more)
tests/: conftest.py  test_hands_stats.py  test_street_loss.py  test_strong_hands.py  test_summary.py  test_utils.py
utils/: db_schema.py  update_schema.py
(+108 files in other folders)
